--- a/packages/transit/static/index.html
+++ b/packages/transit/static/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <head>
   <meta charset='utf-8' />
-  <title>NYC Transit Explorer</title>
+  <title>Toronto Transit Explorer</title>
   <meta name='viewport' content='initial-scale=1.0,user-scalable=no' />
   <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyBBwaBm-FsTFPDseUHhmctmeQvSManggIk'></script>
 
@@ -19,9 +19,9 @@
 
 <script type='text/javascript'>
 // Force https
-if (location.protocol !== 'https:' && location.hostname !== 'localhost') {
-  location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
-}
+// if (location.protocol !== 'https:' && location.hostname !== 'localhost') {
+//   location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
+// }
 </script>
 
 <script src='view.bundle.js'></script>
