change fonts, add about/feedback

--- a/packages/transit/static/index.html
+++ b/packages/transit/static/index.html
@@ -3,15 +3,17 @@
   <meta charset='utf-8' />
   <title>Toronto Transit Explorer</title>
   <meta name='viewport' content='initial-scale=1.0,user-scalable=no' />
+  <!-- for geocoder -->
   <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyBBwaBm-FsTFPDseUHhmctmeQvSManggIk'></script>
 
-  <!-- Do not use absolute paths (those starting with /) in this file, as they will prevent demos
-       from properly running. Note that the paths in view.html all start with '..' since the URL for
-       views starts with 'view/' .-->
-  <link rel='stylesheet' href='font.css' />
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel='stylesheet' href='fonts.css' />
   <link rel='stylesheet' href='transit.css' />
 
   <link rel='icon' type='image/png' href='walk.png' />
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </head>
 <body>
 
