--- a/packages/transit/static/index.html
+++ b/packages/transit/static/index.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel='stylesheet' href='fonts.css' />
-  <link rel='stylesheet' href='transit.css' />
+  <link rel='stylesheet' href='style/fonts.css' />
+  <link rel='stylesheet' href='style/transit.css' />
 
   <link rel='icon' type='image/png' href='walk.png' />
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
