--- a/packages/transit/static/index.html
+++ b/packages/transit/static/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel='stylesheet' href='style/slick.css' />
   <link rel='stylesheet' href='style/fonts.css' />
   <link rel='stylesheet' href='style/transit.css' />
 
