adding tooltip for compare button

--- a/packages/transit/static/index.html
+++ b/packages/transit/static/index.html
@@ -19,6 +19,9 @@
 <body>
 
 <div id='root'></div>
+            <div for="compare-button" className="mdl-tooltip mdl-tooltip--right">
+                <h6>compare</h6>
+            </div>
 
 <script src='view.bundle.js'></script>
 
