--- a/packages/transit/index.html
+++ b/packages/transit/index.html
@@ -29,7 +29,7 @@
   gtag('config', 'UA-79490400-4');
 </script>
 
-<script type='text/javascript'>
+<script>
   // Force https
   if (window.location.protocol !== 'https:' && window.location.hostname !== 'localhost') {
     window.location.protocol = 'https:'
